deploy/k8s/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: news-client
  name: news-client-svc
spec:
  ports:
  - port: 8080
    name: http
    protocol: TCP
    targetPort: 8080
  selector:
    app: news-client
